Searchbar working, still needs polishing though. Home and movie card routes added. First touches on structuring and styling the movie card.

--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -1,6 +1,7 @@
 .movie_searchbar_container {
 	display: flex;
 	justify-content: center;
+	position: relative;
 }
 
 .movie_search {
@@ -12,17 +13,51 @@
 	width: 400px;
 	background-color: #222;
 	color: #888;
-	border: 1px solid #888;
-	border-radius: 4px;
+	border: none;
+	border-bottom: 1px solid #888;
+	/* border: 1px solid #888; */
+	/* border-radius: 4px; */
 	caret-color: rgb(255, 187, 0);
 }
 
 .movie_search:focus {
-	border: 1px solid rgb(255, 187, 0);
+	border: none;
+	border-bottom: 1px solid rgb(255, 187, 0);
 
 	outline: thin #111;
 }
 
 .search_icon {
 	color: #fff;
+}
+
+.search_results_list {
+	background-color: #111;
+	list-style: none;
+	width: 400px;
+	max-width: 100%;
+	position: absolute;
+	left: calc(50% - 200px);
+	top: 74px;
+	border: 1px solid rgb(255, 187, 0);
+	border-top: none;
+	/* padding: 10px; */
+}
+
+.search_results_item {
+	padding: 5px 10px;
+	cursor: pointer;
+}
+
+.search_results_item:hover {
+	background-color: #444;
+}
+
+.search_results_link {
+	text-decoration: none;
+	color: rgb(255, 187, 0);
+}
+
+.empty {
+	border: none;
 }
