--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -1,14 +1,118 @@
-.movie_poster {
-	width: 400px;
+.movie_container {
+	display: flex;
+	max-width: 800px;
+}
+
+.poster_container {
+	display: flex;
+	flex-direction: column;
+	width: 300px;
 	max-width: 100%;
+	height: 450px;
+	background-color: #444;
+}
+
+.movie_poster {
+	width: 300px;
+	max-width: 100%;
+	height: 450px;
+	border-top: 8px solid rgb(255, 187, 0);
+	color: #888;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 5em;
 }
 
 .link_to_browser {
+	font-weight: 500;
 	display: block;
 	text-decoration: none;
-	background-color: #fff;
-	width: 400px;
+	background-color: rgb(255, 187, 0);
+	color: #111;
+	width: 300px;
 	max-width: 100%;
+	height: 45px;
 	text-align: center;
 	padding: 10px;
+}
+
+.info_container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 40px 0 40px 40px;
+}
+
+.movie_title {
+	line-height: 1.3em;
+	color: rgb(255, 187, 0);
+	margin-bottom: 20px;
+}
+
+.movie_release_date {
+	font-size: 1em;
+	font-weight: 300;
+	color: #888;
+	margin-left: 20px;
+}
+
+.movie_overview {
+	color: #888;
+	margin-bottom: 15px;
+}
+
+.genre_container {
+	width: 80%;
+}
+
+.genre_tab {
+	display: inline-block;
+	background-color: rgb(255, 187, 0);
+	margin: 0 8px 6px 0;
+	padding: 2px 6px;
+	font-size: 0.8em;
+	border-radius: 2px;
+}
+
+.movie_rank {
+	margin-top: 5px;
+	color: #888;
+	font-size: 1.4em;
+	display: flex;
+	align-items: center;
+}
+
+.movie_rank_icon {
+	font-size: 0.9em;
+	margin-right: 5px;
+	color: #444;
+}
+
+.movie_rank_number {
+	margin-right: 25px;
+	font-size: 0.9em;
+	font-weight: 300;
+}
+
+@media (max-width: 850px) {
+	.movie_container {
+		flex-direction: column;
+		align-items: center;
+	}
+	.info_container {
+		margin-top: 30px;
+		padding: 40px 0;
+	}
+}
+
+@media (max-width: 380px) {
+	.info_container {
+		margin: 0;
+		padding: 20px 0;
+	}
+
+	.poster_container {
+		width: 250px;
+	}
 }
