--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,16 @@
 }
 
 body {
-	padding: 10px 30px;
+	display: flex;
+	justify-content: center;
+	padding: 40px 100px 0 100px;
 	background-color: #111;
 }
 
 button {
 	font-family: 'Jost', sans-serif;
+}
+
+.app {
+	max-width: 900px;
 }
