--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,7 +1,7 @@
 .copyright {
 	font-size: 0.9em;
 	width: 100%;
-	padding: 50px 0 30px 0;
+	padding: 110px 0 30px 0;
 	color: #444;
 	display: flex;
 	align-items: flex-end;
@@ -12,4 +12,10 @@
 	position: relative;
 	top: 2px;
 	margin-left: 5px;
+}
+
+@media (max-width: 850px) {
+	.copyright {
+		padding: 30px 0;
+	}
 }
