--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,21 +1,15 @@
 .copyright {
 	font-size: 0.9em;
 	width: 100%;
-	padding: 110px 0 30px 0;
-	color: #444;
+	height: 80px;
+	color: var(--colorGrey2);
 	display: flex;
-	align-items: flex-end;
+	align-items: center;
 	justify-content: center;
 }
 
 .copyright_text {
 	position: relative;
-	top: 2px;
+	top: -1px;
 	margin-left: 5px;
-}
-
-@media (max-width: 850px) {
-	.copyright {
-		padding: 30px 0;
-	}
 }
