--- a/src/components/Genres/Genres.module.css
+++ b/src/components/Genres/Genres.module.css
@@ -10,15 +10,15 @@
 	font-size: 0.8em;
 	padding: 5px 10px;
 	margin: 3px;
-	border: 1px solid #444;
-	background-color: #111;
-	color: #888;
+	border: 1px solid var(--colorGrey2);
+	background-color: var(--colorGrey5);
+	color: var(--colorGrey1);
 	border-radius: 4px;
 	cursor: pointer;
 }
 
 .genre_tile:hover,
 .active {
-	background-color: #888;
-	color: #111;
+	background-color: var(--colorGrey1);
+	color: var(--colorGrey5);
 }
