--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -1,24 +1,25 @@
 .movie_container {
 	display: flex;
 	max-width: 800px;
+	min-height: 75vh;
 	margin-top: 60px;
 }
 
 .poster_container {
 	display: flex;
 	flex-direction: column;
-	width: 300px;
+	width: 330px;
 	max-width: 100%;
-	height: 450px;
-	background-color: #444;
+	height: 495px;
+	background-color: var(--colorGrey2);
 }
 
 .movie_poster {
-	width: 300px;
+	width: 330px;
 	max-width: 100%;
 	height: 450px;
-	border-top: 8px solid rgb(255, 187, 0);
-	color: #888;
+	border-top: 8px solid var(--colorOrange);
+	color: var(--colorGrey1);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -29,9 +30,9 @@
 	font-weight: 500;
 	display: block;
 	text-decoration: none;
-	background-color: rgb(255, 187, 0);
-	color: #111;
-	width: 300px;
+	background-color: var(--colorOrange);
+	color: var(--colorGrey5);
+	width: 330px;
 	max-width: 100%;
 	height: 45px;
 	text-align: center;
@@ -41,25 +42,25 @@
 .info_container {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	padding: 40px 0 40px 40px;
 }
 
 .movie_title {
 	line-height: 1.3em;
-	color: rgb(255, 187, 0);
+	color: var(--colorOrange);
 	margin-bottom: 20px;
 }
 
 .movie_release_date {
 	font-size: 1em;
 	font-weight: 300;
-	color: #888;
+	color: var(--colorGrey1);
 	margin-left: 20px;
 }
 
 .movie_overview {
-	color: #888;
+	color: var(--colorGrey1);
 	margin-bottom: 15px;
 }
 
@@ -69,7 +70,7 @@
 
 .genre_tab {
 	display: inline-block;
-	background-color: rgb(255, 187, 0);
+	background-color: var(--colorOrange);
 	margin: 0 8px 6px 0;
 	padding: 2px 6px;
 	font-size: 0.8em;
@@ -78,7 +79,7 @@
 
 .movie_rank {
 	margin-top: 5px;
-	color: #888;
+	color: var(--colorGrey1);
 	font-size: 1.4em;
 	display: flex;
 	align-items: center;
@@ -87,7 +88,7 @@
 .movie_rank_icon {
 	font-size: 0.9em;
 	margin-right: 5px;
-	color: #444;
+	color: var(--colorGrey2);
 }
 
 .movie_rank_number {
@@ -109,11 +110,8 @@
 }
 
 @media (max-width: 380px) {
-	.info_container {
-		/* margin: 0; */
-	}
 	.poster_container {
 		width: 250px;
-		height: 375px;
+		height: 430px;
 	}
 }
