--- a/src/components/Movie/Movie.module.css
+++ b/src/components/Movie/Movie.module.css
@@ -1,13 +1,70 @@
-.movie_item {
+.movie_tile {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	width: 200px;
+	height: 220px;
+	background-color: var(--colorGrey4);
+	margin: 10px;
+}
+
+.image_container {
+	height: 60%;
+	font-size: 3em;
+	overflow: hidden;
+	height: 173px;
+	background-color: var(--colorGrey2);
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	color: var(--colorGrey1);
-	list-style: none;
-	margin: 0 auto;
+}
+
+.image {
+	height: 100%;
+}
+
+.movie_title {
+	height: 50%;
+	line-height: 1.3em;
+	color: var(--colorGrey1);
+	margin: 0 10px;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.movie_release_year {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 10%;
+	color: var(--colorGrey5);
+	background-color: var(--colorOrange);
 }
 
 .link {
 	text-decoration: none;
 }
 
-.movie_item:hover {
+.movie_tile:hover .movie_title {
 	color: var(--colorOrange);
+}
+
+@media (max-width: 656px) {
+	.movie_tile {
+		width: 300px;
+		height: 300px;
+	}
+	.movie_title {
+		font-size: 1.3em;
+		height: 30%;
+	}
+	.image_container {
+		height: 70%;
+	}
+	.image {
+		height: 100%;
+	}
 }
