--- a/src/components/Autocomplete/Autocomplete.module.css
+++ b/src/components/Autocomplete/Autocomplete.module.css
@@ -4,13 +4,18 @@
 	border-bottom: 1px solid var(--colorGrey4);
 	font-size: 0.9em;
 	font-weight: 300;
+	width: 100%;
 }
 
 .search_results_item:hover {
-	background-color: var(--colorGrey2);
+	background-color: var(--colorOrange2);
+	color: var(--colorGrey5);
+	font-weight: 500;
 }
 
 .search_results_link {
 	text-decoration: none;
 	color: var(--colorOrange);
+	display: flex;
+	justify-content: center;
 }
