--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -6,12 +6,12 @@
 
 .button {
 	width: 35px;
-	height: 25px;
+	height: 30px;
 	margin: 20px 9px;
-	background-color: var(--colorOrange);
+	background-color: var(--colorOrange2);
 	border: none;
 	cursor: pointer;
-	border-radius: 4px;
+	/* border-radius: 4px; */
 }
 
 .current_page {
