--- a/src/components/Genres/Genres.module.css
+++ b/src/components/Genres/Genres.module.css
@@ -1,5 +1,6 @@
 .genre_container {
 	max-width: 500px;
+	min-width: 320px;
 	margin: 0 auto;
 	display: flex;
 	justify-content: center;
@@ -16,8 +17,11 @@
 	cursor: pointer;
 }
 
-.genre_tile:hover,
-.active {
+.genre_tile:hover {
+	background-color: var(--colorGrey3);
+}
+
+.genre_tile.active {
 	background-color: var(--colorOrange2);
 	color: var(--colorGrey5);
 }
