--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -1,8 +1,9 @@
 .movie_container {
 	display: flex;
+	align-items: center;
 	max-width: 800px;
 	min-height: 75vh;
-	margin-top: 60px;
+	margin: 30px auto 0;
 }
 
 .poster_container {
@@ -30,7 +31,7 @@
 	font-weight: 500;
 	display: block;
 	text-decoration: none;
-	background-color: var(--colorOrange);
+	background: linear-gradient(160deg, var(--colorOrange), var(--colorOrange2));
 	color: var(--colorGrey5);
 	width: 330px;
 	max-width: 100%;
@@ -43,13 +44,22 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	padding: 40px 0 40px 40px;
+	padding: 40px;
 }
 
 .movie_title {
 	line-height: 1.3em;
 	color: var(--colorOrange);
 	margin-bottom: 20px;
+}
+
+.movie_tagline {
+	font-size: 1.3em;
+	font-weight: 300;
+	font-style: oblique;
+	color: var(--colorOrange2);
+	margin-bottom: 5px;
+	line-height: 1.3em;
 }
 
 .movie_release_date {
@@ -61,7 +71,7 @@
 
 .movie_overview {
 	color: var(--colorGrey1);
-	margin-bottom: 15px;
+	margin-bottom: 20px;
 }
 
 .genre_container {
@@ -103,7 +113,7 @@
 		margin-top: 0;
 	}
 	.info_container {
-		padding: 30px 0 40px 0;
+		/* padding: 30px 30px 40px; */
 	}
 }
 
