--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -106,6 +106,10 @@
 	font-weight: 300;
 }
 
+.loading {
+	margin: 200px auto;
+}
+
 @media (max-width: 850px) {
 	.movie_container {
 		flex-direction: column;
