--- a/src/components/Genres/Genres.module.css
+++ b/src/components/Genres/Genres.module.css
@@ -1,7 +1,8 @@
 .genre_container {
 	max-width: 500px;
 	min-width: 320px;
-	margin: 0 auto;
+	margin: 0 auto 10px;
+	padding: 0 16px;
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
