--- a/src/components/Movie/Movie.module.css
+++ b/src/components/Movie/Movie.module.css
@@ -1,7 +1,5 @@
 .link {
 	text-decoration: none;
-	display: flex;
-	/* justify-content: center; */
 }
 
 .link:focus {
@@ -68,7 +66,6 @@
 		width: 300px;
 		height: 290px;
 	}
-
 	.movie_title {
 		font-size: 1.3em;
 	}
@@ -78,5 +75,8 @@
 	.movie_tile {
 		width: 250px;
 		height: 245px;
+	}
+	.movie_title {
+		font-size: 1.1em;
 	}
 }
