--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -7,10 +7,10 @@
 .movie_search {
 	font-size: 16px;
 	display: block;
-	margin: 30px auto 5px;
+	margin: 0 auto 30px;
 	padding: 10px;
 	width: 90%;
-	max-width: 600px;
+	max-width: 800px;
 	background-color: var(--colorGrey3);
 	color: var(--colorOrange);
 	border: none;
@@ -22,7 +22,7 @@
 }
 
 .movie_search:focus {
-	border: none;
+	border-bottom: 1px solid var(--colorGrey5);
 	outline: thin dotted var(--colorOrange);
 }
 
@@ -35,7 +35,7 @@
 	list-style: none;
 	width: 100%;
 	position: absolute;
-	top: 74px;
-	width: 93%;
-	max-width: 600px;
+	top: 46px;
+	width: 90%;
+	max-width: 800px;
 }
