--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 100vw;
+	/* width: 100vw; */
 }
 
 button,
@@ -58,4 +58,23 @@ input {
 	-ms-user-select: none;
 	user-select: none;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+	height: 10px;
+}
+
+::-webkit-scrollbar-track {
+	background: var(--colorGrey4);
+	border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: var(--colorGrey2);
+	border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
 }
