--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -2,8 +2,8 @@
 	display: flex;
 	align-items: center;
 	max-width: 800px;
-	min-height: 75vh;
-	margin: 30px auto;
+	margin: 30px 0;
+	min-height: 85vh;
 }
 
 .poster_container {
@@ -13,13 +13,21 @@
 	max-width: 100%;
 	height: 495px;
 	background-color: var(--colorGrey2);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+.poster_and_link {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border-top: 8px solid var(--colorOrange);
 }
 
 .movie_poster {
 	width: 330px;
 	max-width: 100%;
 	height: 450px;
-	border-top: 8px solid var(--colorOrange);
 	color: var(--colorGrey1);
 	display: flex;
 	justify-content: center;
@@ -34,14 +42,14 @@
 	background: linear-gradient(160deg, var(--colorOrange), var(--colorOrange2));
 	color: var(--colorGrey5);
 	width: 330px;
-	max-width: 100%;
+	/* max-width: 100%; */
 	height: 45px;
 	text-align: center;
 	padding: 10px;
 }
 
 .info_container {
-	width: 100vw;
+	width: 98vw;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -115,7 +123,10 @@
 	.movie_container {
 		flex-direction: column;
 		align-items: center;
+		justify-content: center;
 		margin: 0 auto;
+		min-height: 97vh;
+		min-height: 100vh;
 	}
 	.info_container {
 		/* padding: 30px 30px 40px; */
@@ -123,8 +134,31 @@
 }
 
 @media (max-width: 380px) {
+	.movie_container {
+	}
 	.poster_container {
 		width: 250px;
+		height: 375px;
+	}
+	.link_to_browser {
+		width: 250px;
+	}
+	.poster {
+		width: 280px;
+		max-width: 100%;
+		height: 375px;
+	}
+}
+
+@media (min-width: 850px) and (orientation: portrait) {
+	.movie_container {
+		min-height: 45vh;
+		margin-top: 0;
+		margin: 0 auto 60px;
+	}
+	.poster {
+		width: 287px;
+		max-width: 100%;
 		height: 430px;
 	}
 }
