--- a/src/components/Actor/Actor.module.css
+++ b/src/components/Actor/Actor.module.css
@@ -1,19 +1,7 @@
-.actors_container {
-	width: 1040px;
-	margin: 0 auto;
-	display: flex;
-	overflow-x: scroll;
-	padding-bottom: 20px;
-}
-
-.actors_container::after {
-	content: '';
-	padding-right: 3px;
-}
-
 .actor {
 	border: 1px solid var(--colorOrange);
 	margin: 10px;
+	width: 152px;
 }
 
 .actor_headshot {
@@ -48,26 +36,6 @@
 	font-weight: 400;
 }
 
-@media (max-width: 1100px) {
-	.actors_container {
-		width: 870px;
-	}
-}
-
-@media (max-width: 910px) {
-	.actors_container {
-		width: 690px;
-	}
-}
-
-@media (max-width: 740px) {
-	.actors_container {
-		width: 520px;
-	}
-}
-
-@media (max-width: 550px) {
-	.actors_container {
-		width: 350px;
-	}
+.link {
+	text-decoration: none;
 }
