Galaxy fold view added. Scroll reset added on movie list after change of category or page.

--- a/src/components/ActorCard/ActorCard.module.css
+++ b/src/components/ActorCard/ActorCard.module.css
@@ -4,10 +4,13 @@
 
 .actor_name {
 	color: var(--colorOrange);
+	padding-bottom: 10px;
 }
 
 .actor_bio {
 	color: var(--colorGrey1);
+	border-top: 5px solid var(--colorOrange);
+	padding-top: 15px;
 }
 
 .homepage_link {
