--- a/src/components/Actor/Actor.module.css
+++ b/src/components/Actor/Actor.module.css
@@ -1,16 +1,17 @@
 .actor {
-	border: 1px solid var(--colorOrange);
+	border: 3px solid var(--colorOrange);
+	box-sizing: content-box;
+	padding: 3px;
 	margin: 10px;
-	width: 152px;
 }
 
 .actor_headshot {
-	width: 150px;
+	width: 141px;
 	height: 210px;
 }
 
 .actor_no_headshot {
-	width: 150px;
+	width: 141px;
 	height: 210px;
 	background-color: var(--colorGrey3);
 	color: var(--colorGrey1);
@@ -38,4 +39,28 @@
 
 .link {
 	text-decoration: none;
+}
+
+@media (max-width: 380px) {
+	.actor {
+		height: 280px;
+		margin: 6px;
+	}
+
+	.actor_headshot {
+		width: 110px;
+		height: 165px;
+	}
+
+	.actor_no_headshot {
+		width: 110px;
+		height: 165px;
+	}
+
+	.actor_name {
+		font-size: 1em;
+	}
+	.actor_character {
+		font-size: 0.9em;
+	}
 }
