--- a/src/components/ActorsList/ActorsList.module.css
+++ b/src/components/ActorsList/ActorsList.module.css
@@ -8,7 +8,7 @@
 
 .actors_container::after {
 	content: '';
-	padding-right: 3px;
+	padding-right: 1px;
 }
 
 @media (max-width: 1100px) {
@@ -19,7 +19,7 @@
 
 @media (max-width: 910px) {
 	.actors_container {
-		width: 690px;
+		width: 700px;
 	}
 }
 
@@ -32,5 +32,11 @@
 @media (max-width: 550px) {
 	.actors_container {
 		width: 350px;
+	}
+}
+
+@media (max-width: 380px) {
+	.actors_container {
+		width: 270px;
 	}
 }
