--- a/src/components/Genres/Genres.module.css
+++ b/src/components/Genres/Genres.module.css
@@ -28,5 +28,6 @@
 }
 
 .genre_tile:focus {
-	outline: thin dotted var(--colorOrange);
+	box-shadow: 0 0 0 1pt var(--colorOrange);
+	outline: none;
 }
