--- a/src/components/LanguageSelector/LanguageSelector.module.css
+++ b/src/components/LanguageSelector/LanguageSelector.module.css
@@ -1,10 +1,11 @@
 .language_btn_container {
 	display: flex;
+	align-items: center;
 	margin-bottom: 25px;
 	font-size: 0.8em;
 	position: absolute;
 	top: 20px;
-	left: 20px;
+	left: 27px;
 }
 
 .language_btn {
@@ -28,8 +29,25 @@
 	background-color: var(--colorGrey3);
 }
 
+.language_btn:focus {
+	box-shadow: 0 0 0 1pt var(--colorOrange);
+	outline: none;
+}
+
 .language_btn.active {
 	background-color: var(--colorOrange2);
 	color: var(--colorGrey5);
 	font-weight: 600;
+}
+
+.info {
+	color: var(--colorGrey1);
+	margin-left: 10px;
+	font-size: 0.8em;
+}
+
+@media (max-width: 390px) {
+	.info {
+		max-width: 180px;
+	}
 }
