--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -11,11 +11,16 @@ h2 {
 	margin: 130px auto;
 }
 
+.no_results {
+	margin: 0 auto;
+}
+
 .movie_list {
 	margin: 0 auto 15px;
 	display: flex;
+	align-items: center;
 	width: 1380px;
-	height: 290px;
+	min-height: 285px;
 	overflow-x: scroll;
 }
 
@@ -42,6 +47,7 @@ h2 {
 		width: auto;
 		flex-direction: column;
 		align-items: center;
+		justify-content: center;
 		overflow-x: visible;
 		height: 100%;
 		margin-bottom: 0;
