--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,10 @@ body {
 	align-items: center;
 }
 
+button {
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 button,
 input {
 	font-family: var(--primaryFont);
