--- a/src/components/ActorCard/ActorCard.module.css
+++ b/src/components/ActorCard/ActorCard.module.css
@@ -2,6 +2,9 @@
 	width: 100%;
 	max-width: 500px;
 	margin-top: 15px;
+	padding: 20px;
+	background: var(--colorGrey5);
+	margin-bottom: 30px;
 }
 
 .actor_name {
@@ -20,7 +23,7 @@
 	color: var(--colorGrey5);
 	background: linear-gradient(165deg, var(--colorOrange), var(--colorOrange2));
 	padding: 10px;
-	margin: 10px 0 50px;
+	margin: 10px 0;
 	display: block;
 	font-weight: 500;
 	text-align: center;
