--- a/src/components/Genres/Genres.module.css
+++ b/src/components/Genres/Genres.module.css
@@ -1,7 +1,7 @@
 .genre_container {
 	max-width: 520px;
 	min-width: 320px;
-	margin: 0 auto 10px;
+	margin-bottom: 10px;
 	padding: 0 16px;
 	display: flex;
 	justify-content: center;
@@ -12,7 +12,7 @@
 	font-size: 0.8em;
 	padding: 5px 10px;
 	margin: 3px;
-	border: 1px solid var(--colorGrey2);
+	border: 2px solid var(--colorGrey2);
 	background-color: var(--colorGrey5);
 	color: var(--colorGrey1);
 	cursor: pointer;
@@ -28,6 +28,6 @@
 }
 
 .genre_tile:focus {
-	box-shadow: 0 0 0 1pt var(--colorOrange);
+	box-shadow: 0 0 0 1pt var(--colorOrange), 0 0 0 2pt var(--colorGrey5);
 	outline: none;
 }
