--- a/src/components/ActorCard/ActorCard.module.css
+++ b/src/components/ActorCard/ActorCard.module.css
@@ -1,7 +1,7 @@
 .actor_container {
 	width: 100%;
 	max-width: 500px;
-	margin-top: 15px;
+	margin-top: 30px;
 	padding: 20px;
 	background: var(--colorGrey5);
 	margin-bottom: 30px;
@@ -27,4 +27,9 @@
 	display: block;
 	font-weight: 500;
 	text-align: center;
+}
+
+.homepage_link:focus {
+	outline: none;
+	box-shadow: inset 0 0 0 2pt var(--colorOrange), inset 0 0 0 3pt var(--colorGrey5);
 }
