--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -3,20 +3,21 @@
 	justify-content: center;
 	position: relative;
 	width: 90%;
-	margin-top: 30px;
+	margin-top: 25px;
 }
 
 .movie_search {
 	font-size: 16px;
 	display: block;
-	margin: 0 auto 30px;
+	margin: 0 auto 25px;
 	padding: 10px;
 	width: 90%;
 	max-width: 800px;
 	background-color: var(--colorGrey3);
 	color: var(--colorOrange);
 	border: none;
-	border-bottom: 2px solid var(--colorOrange);
+	border-bottom: 2px solid var(--colorGrey5);
+	transition: border-bottom 0.5s;
 }
 
 .movie_search::placeholder {
@@ -24,8 +25,8 @@
 }
 
 .movie_search:focus {
-	border-bottom: 1px solid var(--colorGrey5);
-	box-shadow: 0 0 0 1pt var(--colorOrange), 0 0 0 2pt var(--colorGrey5);
+	border-bottom: 2px solid var(--colorOrange);
+	/* box-shadow: 0 0 0 1pt var(--colorOrange), 0 0 0 2pt var(--colorGrey5); */
 	outline: none;
 }
 
