--- a/src/components/SelectTheme/SelectTheme.module.css
+++ b/src/components/SelectTheme/SelectTheme.module.css
@@ -5,7 +5,7 @@
 	font-weight: 500;
 	color: var(--colorGrey5);
 	position: absolute;
-	top: 22px;
+	top: 28px;
 	right: 27px;
 	transition: color 0.5s;
 }
@@ -46,4 +46,10 @@
 
 .switch.dark {
 	transform: translateX(0);
+}
+
+@media (max-width: 599px) {
+	.select_theme_btn_container {
+		top: 23px;
+	}
 }
