--- a/src/components/ActorCard/ActorCard.module.css
+++ b/src/components/ActorCard/ActorCard.module.css
@@ -23,7 +23,7 @@
 	color: var(--colorGrey5);
 	background: linear-gradient(165deg, var(--colorOrange), var(--colorOrange2));
 	padding: 10px;
-	margin: 10px 0;
+	margin: 10px 0 0;
 	display: block;
 	font-weight: 500;
 	text-align: center;
